--- a/form.html
+++ b/form.html
@@ -55,12 +55,12 @@
 <body>
     <nav>
         <a class="navbar" href="miniproject.html">Home</a>
-        <a class="navbar" href="About.html">About</a>
+        <a class="navbar" href="diet.html">Diet</a>
         <a class="navbar" href="Memberships.html">Memberships</a>
         <a class="navbar" href="Excersise.html">Excercise</a>
-        <a class="navbar" href="contact.html" style="margin-right: 200px;">Contact us</a>
+        <a class="navbar" href="why.html" style="margin-right: 200px;">Why HealthIsWealth?</a>
         <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn" style="position: relative;margin-top: 0px;margin-left: 20px;">Search Here</button>
+            <button onclick="myFunction()" class="dropbtn">Looking For Something?&#x1F9D0</button>
             <div id="myDropdown" class="dropdown-content">
               <a href="Diet.html">Diet</a>
               <a href="Excersise.html">About excersises</a>
@@ -89,6 +89,7 @@
           
           </script>
     </nav>
+    
 <br><br><hr><br>
 <form id="membershipForm">
     <label for="name">Name:</label>
