--- a/miniproject.html
+++ b/miniproject.html
@@ -47,14 +47,16 @@
           </script>
     </nav>
     
-<div id="offer" style="text-align: center;position: relative;"  ><p style="position: relative;top:0px;">We have a <b > Special Membership Trial Offer</b> just <b> @599</b></p></div> 
+<div id="offerbox"  >
+  <p id="offer" >We have a <b > Special Membership Trial Offer</b> just <b> @599</b></p>
+</div> 
 <br><br>
     <p id="text1" class="text-line">Enjoy the workout session of all age groups..! </p><br><br>
-    <img src="https://media.istockphoto.com/id/1132086660/photo/side-view-of-beautiful-muscular-woman-running-on-treadmill.jpg?s=612x612&w=0&k=20&c=5Vq_BJjG7sbIyKIP-Adu0pChReDXm0dC7BVPvto2M0I=" style="height: 200px;width: 300px;" class="img" id="img1">
+    <img src="https://img.freepik.com/premium-photo/friends-run-together-fitness-exercises-healthy-lifestyle-running-fast-full-height-fresh-air_283470-9475.jpg" style="height: 200px;width: 300px;" class="img" id="img1">
     <p ID="text2"class="text-line" >Stress releifing Laughter clubs..! </p><br><br>
-    <img src="https://cdn.pixabay.com/photo/2017/08/07/14/02/man-2604149_1280.jpg" id= "img2" class="img"  style="height: 200px;width: 300px;" >
+    <img src="https://as1.ftcdn.net/v2/jpg/05/98/59/60/1000_F_598596096_BOQ5GHWVt1WYFvEr1E6HTlav42ooXQ2W.jpg" id= "img2" class="img"  style="height: 200px;width: 300px;" >
     <p ID="text3" class="text-line">Increase your lifetime with good diet..! </p><br><br>
-    <img src="https://img.freepik.com/free-photo/young-happy-sportswoman-getting-ready-workout-tying-shoelace-fitness-center_637285-470.jpg"  style="height: 200px;width: 300px;" id="img3" class="img" /><br><br>
+    <img src="https://images.everydayhealth.com/images/diet-nutrition/mediterranean-diet/mediterranean-diet-food-list-meal-plan-722x406.jpg"  style="height: 200px;width: 300px;" id="img3" class="img" /><br><br>
     <br><br><br>
 </body>
 
