--- a/form.html
+++ b/form.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="miniproject.css">
+    <link rel="stylesheet" href="form.css">
     <title>Health Website Membership</title>
     <style>
 
         form {
-            background-color: black;
+            background-color: rgb(241, 218, 207);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 300px;
-            color: antiquewhite;
+            color: rgb(0, 0, 0);
             margin-left: 600px;
             margin-top: 50px;
         }
@@ -41,18 +42,20 @@
             border-radius: 4px;
         }
 
-        button {
-            background-color: #4caf50;
+        #btn {
+            background-color: #71206d;
             color: #fff;
             padding: 10px 15px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            margin-left: 110px;
         }
     </style>
 </head>
 <header>WELCOME TO HealthIsWealth CLUB!!!</header>
 <body>
+    
     <nav>
         <a class="navbar" href="miniproject.html">Home</a>
         <a class="navbar" href="diet.html">Diet</a>
@@ -91,6 +94,7 @@
     </nav>
     
 <br><br><hr><br>
+<h1 style="text-align: center;">INFORMATION FORM</h1>
 <form id="membershipForm">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
@@ -111,7 +115,7 @@
         <option value="paypal">PayPal</option>
     </select>
 
-    <button type="button" onclick="submitForm()">Submit</button>
+    <button id="btn" type="button" onclick="submitForm()">Submit</button>
 </form>
 
 <script>
