--- a/miniproject.html
+++ b/miniproject.html
@@ -1,69 +1,66 @@
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HealthIsWealth</title>
-    <link rel="stylesheet" href="miniproject.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+    <!-- Navbar -->
     <header>
-        
-        <b>WELCOME TO HealthIsWealth CLUB!!!</b>
+        <h1>Health Is Wealth</h1>
     </header>
-
-    <nav class="navbar">
-        <a href="miniproject.html">Home</a>
+    <nav>
+         <a href="miniproject.html">Home</a>
         <a href="diet.html">Diet</a>
         <a href="Memberships.html">Memberships</a>
         <a href="Excersise.html">Exercise</a>
         <a href="why.html">Why HealthIsWealth?</a>
     </nav>
 
-    <div id="offerbox">
-        <p id="offer"><b>Special Membership Trial Offer</b> just <b>@599</b></p>
-    </div>
+    <!-- Home Section -->
+    <section id="home" class="section-container">
+        <h2>Welcome to Health Is Wealth</h2>
+        <p>Your journey to a healthy lifestyle begins here.</p>
+        <img src="https://static.vecteezy.com/system/resources/previews/004/805/307/original/flat-design-abstract-background-soft-liquid-shapes-template-with-modern-gradient-background-colors-cool-aesthetic-background-design-suitable-for-social-media-post-mobile-app-banner-web-ads-free-vector.jpg" alt="Health Background" class="section-image">
+    </section>
 
-    <div class="content">
-        <p class="text-line">Enjoy the workout session for all age groups..!</p>
-        <img src="https://img.freepik.com/premium-photo/friends-run-together-fitness-exercises-healthy-lifestyle-running-fast-full-height-fresh-air_283470-9475.jpg" class="img" alt="Workout Session">
+    <!-- Diet Memberships Section -->
+    <section id="diet" class="section-container">
+        <h2>Diet Memberships</h2>
+        <p>Join our exclusive diet plans to achieve your fitness goals.</p>
+        <img src="https://yourdietimageurl.com" alt="Diet" class="section-image">
+    </section>
 
-        <p class="text-line">Stress-relieving Laughter clubs..!</p>
-        <img src="https://as1.ftcdn.net/v2/jpg/05/98/59/60/1000_F_598596096_BOQ5GHWVt1WYFvEr1E6HTlav42ooXQ2W.jpg" class="img" alt="Laughter Club">
+    <!-- Exercise Section -->
+    <section id="exercise" class="section-container">
+        <h2>Exercise Plans</h2>
+        <p>Explore customized exercise routines tailored to your needs.</p>
+        <img src="https://yourexerciseimageurl.com" alt="Exercise" class="section-image">
+    </section>
 
-        <p class="text-line">Increase your lifetime with a good diet..!</p>
-        <img src="https://images.everydayhealth.com/images/diet-nutrition/mediterranean-diet/mediterranean-diet-food-list-meal-plan-722x406.jpg" class="img" alt="Healthy Diet">
-    </div>
+    <!-- Why Health Is Wealth Section -->
+    <section id="why-health" class="section-container">
+        <h2>Why Health Is Wealth</h2>
+        <p>Discover why taking care of your health is the key to a fulfilling life.</p>
+        <img src="https://yourwhyhealthiswealthimageurl.com" alt="Health Benefits" class="section-image">
+    </section>
 
+    <!-- Footer -->
     <footer>
-        <div class="footer-option">
-            <a href="miniproject.html">Home</a>
-            <img src="https://e7.pngegg.com/pngimages/703/597/png-clipart-logo-house-home-house-angle-building-thumbnail.png" alt="Home">
-        </div>
-        <div class="footer-option">
-            <a href="Excersise.html">Exercise</a>
-            <img src="https://cdn1.vectorstock.com/i/1000x1000/36/80/exercise-stress-test-logo-icon-design-vector-15613680.jpg" alt="Exercise">
-        </div>
-        <div class="footer-option">
-            <a href="contact.html">Contact Us</a>
-            <img src="https://i.pngimg.me/thumb/f/720/m2i8A0K9i8G6b1N4.jpg" alt="Contact Us">
-        </div>
-        <div class="footer-option">
-            <a href="#">Email</a>
-            <img src="https://img.freepik.com/free-vector/open-email-envelope_1020-530.jpg" alt="Email">
-        </div>
-        <div class="footer-option">
-            <a href="#">Instagram</a>
-            <img src="https://img.freepik.com/free-vector/instagram-vector-social-media-icon-7-june-2021-bangkok-thailand_53876-136728.jpg" alt="Instagram">
-        </div>
-        <div class="footer-option">
-            <a href="#">Twitter</a>
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/018/930/745/small/twitter-logo-twitter-icon-transparent-free-free-png.png" alt="Twitter">
-        </div>
-        <div class="copyright">
-            &copy; 2024 HealthIsWealth. All rights reserved.
-        </div>
+        <p>© 2024 Health Is Wealth. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
