--- a/miniproject.html
+++ b/miniproject.html
@@ -39,27 +39,27 @@
     <footer>
         <div class="footer-option">
             <a href="miniproject.html">Home</a>
-            <img src="https://e7.pngegg.com/pngimages/703/597/png-clipart-logo-house-home-house-angle-building-thumbnail.png" alt="Home">
+            <img src="https://e7.pngegg.com/pngimages/703/597/png-clipart-logo-house-home-house-angle-building-thumbnail.png" alt="Home" class ="footer">
         </div>
         <div class="footer-option">
             <a href="Excersise.html">Exercise</a>
-            <img src="https://cdn1.vectorstock.com/i/1000x1000/36/80/exercise-stress-test-logo-icon-design-vector-15613680.jpg" alt="Exercise">
+            <img src="https://cdn1.vectorstock.com/i/1000x1000/36/80/exercise-stress-test-logo-icon-design-vector-15613680.jpg" alt="Exercise" class ="footer">
         </div>
         <div class="footer-option">
             <a href="contact.html">Contact Us</a>
-            <img src="https://i.pngimg.me/thumb/f/720/m2i8A0K9i8G6b1N4.jpg" alt="Contact Us">
+            <img src="https://i.pngimg.me/thumb/f/720/m2i8A0K9i8G6b1N4.jpg" alt="Contact Us" class ="footer">
         </div>
         <div class="footer-option">
             <a href="#">Email</a>
-            <img src="https://img.freepik.com/free-vector/open-email-envelope_1020-530.jpg" alt="Email">
+            <img src="https://img.freepik.com/free-vector/open-email-envelope_1020-530.jpg" alt="Email" class ="footer">
         </div>
         <div class="footer-option">
             <a href="#">Instagram</a>
-            <img src="https://img.freepik.com/free-vector/instagram-vector-social-media-icon-7-june-2021-bangkok-thailand_53876-136728.jpg" alt="Instagram">
+            <img src="https://img.freepik.com/free-vector/instagram-vector-social-media-icon-7-june-2021-bangkok-thailand_53876-136728.jpg" alt="Instagram" class ="footer">
         </div>
         <div class="footer-option">
             <a href="#">Twitter</a>
-            <img src="https://static.vecteezy.com/system/resources/thumbnails/018/930/745/small/twitter-logo-twitter-icon-transparent-free-free-png.png" alt="Twitter">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/018/930/745/small/twitter-logo-twitter-icon-transparent-free-free-png.png" alt="Twitter" class ="footer">
         </div>
         <div class="copyright">
             &copy; 2024 HealthIsWealth. All rights reserved.
